--- a/07_segmentation_2/Exercise-week_10.ipynb
+++ b/07_segmentation_2/Exercise-week_10.ipynb
@@ -16,7 +16,8 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "%matplotlib notebook #try widget instead if graphs aren't showing\n",
+    "%matplotlib notebook \n",
+    "#try widget instead if graphs aren't showing\n",
     "\n",
     "import cv2\n",
     "import maxflow\n",
@@ -458,7 +459,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "FYP",
    "language": "python",
    "name": "python3"
   },
@@ -472,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
